syntax = "proto3";

import "common.proto";
import "imu.proto";
option java_multiple_files = true;
option java_package = "io.github.mobotx";

package mobot;

service Gyroscope{
  rpc SetGyroscopeMetadata (SensorMetadata) returns (Success) {}
  rpc NewGyroscopeData (Vector3) returns (Success) {}
}
